Created Python Flask server with basic synergy calculator service at /api/synergy?card1=<id>&card2<id> endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,13 @@ dist/
 coverage/
 .vscode/
 server/env/
+server/venv/
+server/*.pyc
+instance/
+.pytest_cache/
+.coverage
+htmlcov/
+build/
+*.egg-info/
 venv/
 server/__pycache__/
