--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier \"src/**/*.{js, html}\" --write",
     "lint": "eslint \"src/**/*.{js, jsx}\" --quiet",
-    "dev": "parcel src/index.html",
+    "dev": "parcel server/static/index.html",
     "clean": "rm -r ./dist ./.cache"
   },
   "author": "",
