--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "cd ./server/flaskr && flask run",
+    "server": "cd ./server/flaskr && flask run --host=localhost --no-debugger",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier \"src/**/*.{js, html}\" --write",
     "lint": "eslint \"src/**/*.{js, jsx}\" --quiet",
@@ -36,10 +36,5 @@
   "browserslist": [
     "last 2 Chrome versions",
     "last 2 Firefox versions"
-  ],
-  "proxy": {
-    "/*": {
-      "target": "http://localhost:5000/"
-    }
-  }
+  ]
 }
