--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ coverage/
 .vscode/
 server/env/
 server/venv/
-server/*.pyc
+*.pyc
 instance/
 .pytest_cache/
 .coverage
@@ -14,4 +14,4 @@ htmlcov/
 build/
 *.egg-info/
 venv/
-server/flaskr/__pycache__/*
+__pycache__/
